<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <TextView
	        android:id="@+id/SSID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#0000FF"
	        android:textSize="16dp" />
	    <Space 
	        android:layout_width="10dp"
	        android:layout_height="match_parent"/>
	    <TextView 
	        android:id="@+id/BSSID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16dp"/>
    </LinearLayout>
    
	<LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level" />
	    <TextView
	        android:id="@+id/wifiLevel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FF0000"
	        android:textSize="18dp" />
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dbm_unit"
	        android:textSize="14dp" />
	    <Space 
	        android:layout_width="10dp"
	        android:layout_height="match_parent"/>
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/frequency" />
	    <TextView
	        android:id="@+id/wifiFrequency"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Hz_unit" />
	</LinearLayout>
</LinearLayout>